Fix minor changes to image and score section alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,6 @@ body{
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
 }
 
 
@@ -145,6 +144,7 @@ body{
 
   /* Clicker element styling */
   .container-clicker {
+    width: 90%;
     margin: 3em auto;
   }
 
@@ -168,16 +168,25 @@ body{
 
 /* Desktop & tablets screens */
 @media screen and (min-width: 781px) {
+  .container-main {
+    height: 80%;
+    margin: 1em 3em;
+  }
+
   .container-clicker {
-    width: 70%;
+    width: 60%;
+    margin: .5em auto;
   }
 
   .container-upgrades {
     overflow-y: hidden;
     max-height: 70vh;
     min-height: 60vh;
-    margin-top: 3em;
-    margin-right: 3em;
+  }
+
+  .container-score {
+    margin: 1em .5em;
+    padding: 1em;
   }
   
   #upgrade-list {
@@ -185,4 +194,5 @@ body{
     overflow-y: scroll;
     height: 90%;
   }
+
 }
